--- a/app/src/main/res/layout/line_item.xml
+++ b/app/src/main/res/layout/line_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
     >
 
 
@@ -16,46 +16,52 @@
 
         <TextView
             android:id="@+id/tv_name"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:text=""
             android:textAppearance="@style/TextAppear.Theme.111111_Size15"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/et_value"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
             android:background="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColorHint="@color/color_hint"
+            android:gravity="right|center_vertical"
             android:hint=""
-            android:gravity="right"
             android:singleLine="true"
-            android:textCursorDrawable="@null"
+            android:text=""
             android:textAppearance="@style/TextAppear.Theme.111111_Size15"
+            android:textColorHint="@color/color_hint"
+            android:textCursorDrawable="@null"
             />
 
         <TextView
             android:id="@+id/tv_value"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:background="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColorHint="@color/color_hint"
+            android:gravity="right|center_vertical"
             android:hint=""
-            android:visibility="gone"
-            android:gravity="right"
             android:singleLine="true"
-            android:textCursorDrawable="@null"
+            android:text=""
             android:textAppearance="@style/TextAppear.Theme.111111_Size15"
+            android:textColorHint="@color/color_hint"
+            android:textCursorDrawable="@null"
+            android:visibility="gone"
             />
+
         <ImageView
             android:id="@+id/iv_last"
-            android:padding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:padding="4dp"
             android:src="@drawable/icon_click"
             android:visibility="gone"/>
 
